styles/style.css
/* ... */
.media-viewer--fullscreen .media-viewer__comp-slider {
    height: auto;
    width: auto;
}

@media (max-width: 900px) and (orientation: portrait) {
    .media-viewer--fullscreen .media-viewer__comp-slider {
        width: 100%;
    }
}

@media (max-width: 900px) and (orientation: landscape) {
    .media-viewer--fullscreen .media-viewer__comp-slider {
        height: 100%;
    }
}

.media-viewer--fullscreen .media-viewer__comp-slider .comp-slider__before-img {
    max-height: initial;
}

@media (max-width: 900px) and (orientation: portrait) {
    .media-viewer--fullscreen .media-viewer__comp-slider .comp-slider__before-img {
        width: 100%;
    }
}

@media (max-width: 900px) and (orientation: landscape) {
    .media-viewer--fullscreen .media-viewer__comp-slider .comp-slider__before-img {
        height: 100%;
    }
}

.media-viewer__graphic {
    display: block;
    width: 100%;
    object-fit: contain;
}

@media (max-width: 900px) {
    .media-viewer__graphic {
        max-height: 50vh;
    }
}

.media-viewer--fullscreen .media-viewer__graphic {
    width: auto;
    height: auto;
    max-height: none;
}

@media (max-width: 900px) and (orientation: landscape) {
    .media-viewer--fullscreen .media-viewer__graphic {
        height: 100%;
    }
}

@media (max-width: 900px) and (orientation: portrait) {
    .media-viewer--fullscreen .media-viewer__graphic {
        width: 100%;
    }
}

.media-viewer__fullscreen-btn {
    position: absolute;
    bottom: 0;
    right: 0;
    margin: 0;
    box-sizing: border-box;
    width: 2.75em;
    height: 2.75em;
    padding: 0.75em;
    border: none;
    border-radius: 10px 0 0 0;
    background: #ffffff87;
    font-size: 1em;
    z-index: 2;
}

.media-viewer__fullscreen-btn--hidden {
    display: none;
}

.media-viewer__fullscreen-btn-icon {
    width: 100%;
    height: 100%;
    fill: #15404e;
}

.media-viewer__fullscreen-btn-icon--hidden {
    display: none;
}

/* section-text */
.section-text {
    position: relative;
}

@media (min-width:900px) {
    .section-text {
        position: absolute;
        right: 0;
        top: 50%;
        transform: translate(0, -50%);
        width: 38%;
        max-height: 94%;
        display: flex;
        flex-direction: column;
        transition: transform 1s ease 1s;
    }
}

.section-text--shelved {
    transform: translate(100%, -50%);
    transition: transform 1s ease 0s;
}

.section-text--hidden {
    display: none;
}

.section-text__unshelve-btn-container {
    position: absolute;
    left: 0;
    top: 0;
    transform: translateX(0%);
    display: flex;
    align-items: center;
    padding: 0.2em 0.75em 0.2em 0;
    background: #363636;
    z-index: 0;
    visibility: hidden;
    transition: transform 1s ease 0s, visibility 1s ease 0s;
}

@media (max-width: 900px) {
    .section-text__unshelve-btn-container {
        display: none;
    }
}

.section-text--shelved .section-text__unshelve-btn-container {
    transform: translateX(-100%);
    visibility: visible;
    transition: transform 1s ease 1s, visibility 0s ease 1s;
}

.section-text__unshelve-btn {
    padding: 0.45em 1em 0.45em 0.45em;
    border: none;
    font-size: 1.35em;
    font-weight: 600;
    white-space: nowrap;
    color: #fff;
    background: none;
}

.section-text__stop-narration-btn {
    box-sizing: border-box;
    width: 2.25em;
    height: 2.25em;
    border-radius: 100px;
    border: none;
    box-shadow: 0px 0px 0 2px #fff;
    padding: 0.4em;
    background: none;
    font-size: 1em;
}

.section-text__stop-narration-btn--hidden {
    display: none;
}

.section-text__stop-narration-btn-icon {
    fill: #fff;
}

.section-text__main-container {
    min-height: calc(100vh - 112px);
    display: flex;
    flex-direction: column;
    padding: 16px 0;
    font-size: 1rem;
    background: #363636;
}

@media (min-width:900px) {
    .section-text__main-container {
        min-height: 0;
        flex: 1;
        padding: 0;
        transition: visibility 0s ease 0s;
    }

    .section-text--shelved .section-text__main-container {
        visibility: hidden;
        transition: visibility 0s ease 1s;
    }

    .section-text__main-container--no-learn-more {
        padding-bottom: 1em;
    }
}

.section-text__text-container {
    display: flex;
    flex-direction: column;
    overflow: auto;
    padding: 0 1em;
    padding: 0 max(1em, env(safe-area-inset-right)) 0 max(1em, env(safe-area-inset-left));
    color: #fff;
    background: inherit;
}

@media (min-width:900px) {
    .section-text__text-container {
        padding: 1rem 0 0;
    }
}

.section-text__header-container {
    display: flex;
    align-items: center;
    flex: 1 0 auto;
    margin-top: calc(0.4rem + 2px);
    margin-right: 4.5rem;
    font-size: 1.35em;
}

@media (min-width:900px) {
    .section-text__header-container {
        padding-left: 1rem;
    }
}

.section-text__shelve-btn {
    padding: 0;
    border: none;
    color: inherit;
    background: inherit;
    font-size: 1em;
    font-weight: 600;
    white-space: nowrap;
}

@media (max-width: 900px) {
    .section-text__shelve-btn {
        display: none;
    }
}

@media (min-width:900px) {
    .section-text__narration-player {
        padding-left: 1rem;
    }
}

.section-text__header-divider {
    margin: 0 1em;
    width: .1em;
    height: 1.25em;
    background: #fff;
}

@media (max-width: 900px) {
    .section-text__header-divider {
        display: none;
    }
}

.section-text__title {
    margin: 0;
    font-size: inherit;
}

.section-text__toggle-narration-btn {
    position: absolute;
    top: 1em;
    right: 1em;
    box-sizing: border-box;
    width: 2.75em;
    height: 2.75em;
    border-radius: 100px;
    border: 2px solid #0000;
    padding: 0.4em;
    background: none;
    font-size: 1em;
    transition: border 0.25s;
}

@media (min-width:900px) {
    .section-text__toggle-narration-btn:hover {
        border: 2px solid #fff;
    }
}
/* ... */

